<resources>
    <string name="app_name">TNES: Tasker Network Event Server</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plugin_name">Network Event</string>
    <string name="lbl_addr">HTTP server at </string>
    <string name="lbl_port">:</string>
    <string name="lbl_name">Event name:</string>
    <string name="lbl_filter">Filters:</string>
    <string name="btn_lbl_new_filter">Add filter</string>
    <string name="btn_lbl_delete_filter">Remove filter</string>
    <string name="lbl_filter_help">(one per line)</string>
    <string name="lbl_address_socket_server">Remote broker adress:</string>
    <string name="lbl_address_socket_server_default_value">http://thacthab.herokuapp.com/</string>
    <string name="lbl_login_socket_server">Login: </string>
    <string name="lbl_password_socket_server">Password: </string>
</resources>
