<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_lbl_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbl_addr" />

            <TextView
                android:id="@+id/txt_addr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_lbl_addr"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/txt_lbl_addr"
                android:layout_toRightOf="@+id/txt_lbl_addr" />

            <TextView
                android:id="@+id/txt_lbl_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_lbl_addr"
                android:text=":" />

            <TextView
                android:id="@+id/txt_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_lbl_port"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/txt_lbl_port"
                android:layout_toRightOf="@+id/txt_lbl_port"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

    <TextView
        android:id="@+id/txt_lbl_address_socket_server"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/lbl_address_socket_server"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/edit_txt_address_socket_server"
        android:text="@string/lbl_address_socket_server_default_value"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/txt_t_lbl_name"/>

    <LinearLayout
        android:id="@+id/llayout_socket_server_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_lbl_login_socket_server"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_login_socket_server"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:gravity="top|right"/>

        <EditText
            android:id="@+id/edit_txt_login_socket_server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_t_lbl_name"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llayout_socket_server_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp" >
        <TextView
            android:id="@+id/txt_lbl_password_socket_server"
            android:layout_height="wrap_content"
            android:layout_width="72dp"
            android:text="@string/lbl_password_socket_server"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:gravity="top|right" />

        <EditText
            android:id="@+id/edit_txt_password_socket_server"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_t_lbl_name"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/txt_lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_lbl_port"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/edit_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txt_lbl_name"
            android:layout_toEndOf="@+id/txt_lbl_name"
            android:layout_toRightOf="@+id/txt_lbl_name"
            android:inputType="none"
            android:background="#AAFFFF"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_lbl_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit_txt_name"
            android:text="@string/lbl_filter"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/txt_lbl_filter_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txt_lbl_filter"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/txt_lbl_filter"
            android:layout_toRightOf="@+id/txt_lbl_filter"
            android:text="@string/lbl_filter_help"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
    </LinearLayout>
    <EditText
        android:id="@+id/edit_txt_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AAFFFF"
        android:lines="10"
        android:inputType="textMultiLine" />

</LinearLayout>
